--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,9 @@ repositories {
 
 dependencies {
 
-    compile group: 'org.springframework.session', name: 'spring-session', version: '1.0.2.RELEASE'
-    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
+    compile group: 'org.springframework.session', name: 'spring-session', version: '+'
+    compile group: 'org.springframework.data', name: 'spring-data-couchbase', version: '+'
+//    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: '1.3.2.RELEASE'
 
     compile group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: '1.3.2.RELEASE', optional
