--- a/build.gradle
+++ b/build.gradle
@@ -28,16 +28,17 @@ repositories {
 
 dependencies {
 
-    compile group: 'org.springframework.session', name: 'spring-session', version: '+'
-    compile group: 'org.springframework.data', name: 'spring-data-couchbase', version: '+'
-//    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: '1.3.2.RELEASE'
+    compile group: 'org.springframework.data', name: 'spring-data-couchbase', version: '+'
+    compile group: 'org.springframework.session', name: 'spring-session', version: '+'
 
     compile group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: '1.3.2.RELEASE', optional
 
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '1.3.2.RELEASE'
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '1.3.2.RELEASE'
     testCompile group: 'org.spockframework', name: 'spock-spring', version: '1.0-groovy-2.4'
+    testCompile group: 'com.google.code.gson', name: 'gson', version: '2.3.1'
+    testCompile files('src/test/resources/CouchbaseMock-1.4.1.jar')
 }
 
 configurations {
