--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: '1.3.2.RELEASE'
     compile group: 'org.springframework.data', name: 'spring-data-couchbase', version: '+'
     compile group: 'org.springframework.session', name: 'spring-session', version: '+'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '+'
 
     compile group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: '1.3.2.RELEASE', optional
 
