--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y libssl1.0.0
-  - wget http://packages.couchbase.com/releases/4.1.0/couchbase-server-enterprise_4.1.0-ubuntu14.04_amd64.deb.md5
-  - dpkg -i couchbase-server-enterprise_4.1.0-ubuntu14.04_amd64.deb
+  - sudo wget http://packages.couchbase.com/releases/4.1.0/couchbase-server-enterprise_4.1.0-ubuntu14.04_amd64.deb.md5
+  - sudo dpkg -i couchbase-server-enterprise_4.1.0-ubuntu14.04_amd64.deb
 language: java
 jdk:
   - oraclejdk7
