--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
+language: java
+jdk:
+  - oraclejdk7
 before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y libssl1.0.0
   - sudo wget http://packages.couchbase.com/releases/3.1.3/couchbase-server-enterprise_3.1.3-ubuntu12.04_amd64.deb
   - sudo dpkg -i couchbase-server-enterprise_3.1.3-ubuntu12.04_amd64.deb
-language: java
-jdk:
-  - oraclejdk7
+script:
+  - ./gradlew test -i --stacktrace
 after_success:
   - ./gradlew jacocoTestReport coveralls
