--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,11 @@ before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y libssl1.0.0
   - sudo wget http://packages.couchbase.com/releases/3.0.1/couchbase-server-community_3.0.1-ubuntu12.04_amd64.deb
+  - sudo iptables -I INPUT -p tcp --dport 8091 --syn -j ACCEPT
+  - sudo iptables -I INPUT -p tcp --dport 11210 --syn -j ACCEPT
+  - sudo service iptables save
   - sudo dpkg -i couchbase-server-community_3.0.1-ubuntu12.04_amd64.deb
-  - sudo /opt/couchbase/bin/couchbase-cli cluster-init --cluster localhost:8091 --cluster-username=Administrator --cluster-password=password --cluster-port=8091 --cluster-ramsize=256 -u Administrator -p password
+  - sudo /opt/couchbase/bin/couchbase-cli cluster-init --cluster 127.0.0.1:8091 --cluster-username=Administrator --cluster-password=password --cluster-port=8091 --cluster-ramsize=256 -u Administrator -p password
 script:
   - ./gradlew test -i
 after_success:
