--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ before_install:
   - sudo iptables -I INPUT -p tcp --match multiport --dports 11211,11210,11209,4369,8091,8092,18091,18092,11214,11215 --syn -j ACCEPT
   - sudo iptables -I INPUT -p tcp --match multiport --dports 21100:21299 --syn -j ACCEPT
   - sudo dpkg -i couchbase-server-community_3.0.1-ubuntu12.04_amd64.deb
-  - sudo /opt/couchbase/bin/couchbase-cli cluster-init --cluster 127.0.0.1:8091 --cluster-username=Administrator --cluster-password=password --cluster-port=8091 --cluster-ramsize=256 -u Administrator -p password || true
+  - HOSTNAME=`hostname -f`
+  - sudo /opt/couchbase/bin/couchbase-cli cluster-init --cluster $HOSTNAME:8091 --cluster-username=Administrator --cluster-password=password --cluster-port=8091 --cluster-ramsize=256 -u Administrator -p password || true
 script:
   - ./gradlew test -i
 after_success:
