--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,8 @@ before_install:
   - sudo iptables -I INPUT -p tcp --match multiport --dports 11211,11210,11209,4369,8091,8092,18091,18092,11214,11215 --syn -j ACCEPT
   - sudo iptables -I INPUT -p tcp --match multiport --dports 21100:21299 --syn -j ACCEPT
   - sudo dpkg -i couchbase-server-community_3.0.1-ubuntu12.04_amd64.deb
-  - HOSTNAME=`hostname -f`
-  - sudo /opt/couchbase/bin/couchbase-cli cluster-init -c $HOSTNAME:8091 -u Administrator -p password --cluster-ramsize=256 || true
-  - sudo /opt/couchbase/bin/couchbase-cli bucket-create -c $HOSTNAME:8091 -u Administrator -p password --bucket=default --bucket-ramsize=256 --bucket-replica=1
+  - sudo /opt/couchbase/bin/couchbase-cli cluster-init -c localhost:8091 -u Administrator -p password --cluster-ramsize=256 || true
+  - sudo /opt/couchbase/bin/couchbase-cli bucket-create -c localhost:8091 -u Administrator -p password --bucket=default --bucket-ramsize=256 --bucket-replica=1 || true
 script:
   - ./gradlew test -i
 after_success:
