--- a/circle.yml
+++ b/circle.yml
@@ -1,7 +1,5 @@
-dependencies:
-  pre:
-    - sudo apt-get -qq update
-    - sudo apt-get install -y libssl1.0.0
-    - sudo wget http://packages.couchbase.com/releases/4.1.0/couchbase-server-enterprise_4.1.0-ubuntu14.04_amd64.deb
-    - sudo /etc/init.d/couchbase-server stop
-    - sudo dpkg -i couchbase-server-enterprise_4.1.0-ubuntu14.04_amd64.deb
+machine.services:
+    - couchbase-server
+dependencies.pre:
+    - /opt/couchbase/bin/couchbase-cli cluster-init -c localhost:8091 -u Administrator -p password --cluster-ramsize=256
+    - /opt/couchbase/bin/couchbase-cli bucket-create -c localhost:8091 -u Administrator -p password --bucket=default --bucket-ramsize=256 --bucket-replica=1
