--- a/build.gradle
+++ b/build.gradle
@@ -30,8 +30,9 @@ dependencies {
 
     compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: '1.3.2.RELEASE'
     compile group: 'org.springframework.data', name: 'spring-data-couchbase', version: '+'
-    compile group: 'org.springframework.session', name: 'spring-session', version: '+'
+    compile group: 'org.springframework.session', name: 'spring-session', version: '1.0.2.RELEASE'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '+'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '+'
 
     compile group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: '1.3.2.RELEASE', optional
 
