--- a/circle.yml
+++ b/circle.yml
@@ -7,6 +7,6 @@ dependencies:
     - /opt/couchbase/bin/couchbase-cli bucket-create -c localhost:8091 -u Administrator -p password --bucket=default --bucket-ramsize=256 --bucket-replica=0
 test:
   post:
-    - ./gradlew jacocoTestReport coveralls
     - mkdir -p $CIRCLE_TEST_REPORTS/junit/
     - find . -type f -regex ".*/build/test-results/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
+    - pip install codecov && codecov
