--- a/circle.yml
+++ b/circle.yml
@@ -9,4 +9,4 @@ test:
   post:
     - mkdir -p $CIRCLE_TEST_REPORTS/junit/
     - find . -type f -regex ".*/build/test-results/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
-    - pip install codecov && codecov
+    - sudo pip install codecov && codecov
