--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 plugins {
     id 'groovy'
     id 'maven-publish'
-        id 'nebula.optional-base' version '3.0.3'
+    id 'jacoco'
+    id 'nebula.optional-base' version '3.0.3'
     id 'com.github.kt3k.coveralls' version '2.6.3'
     id 'maven'
     id 'signing'
@@ -113,5 +114,12 @@ publishing {
             from components.java
             artifact sourceJar
         }
+    }
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled = true
+        html.enabled = true
     }
 }
