--- a/circle.yml
+++ b/circle.yml
@@ -9,4 +9,5 @@ test:
   post:
     - mkdir -p $CIRCLE_TEST_REPORTS/junit/
     - find . -type f -regex ".*/build/test-results/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
+    - ./gradlew jacocoTestReport
     - sudo pip install codecov && codecov
