--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,9 @@ repositories {
 dependencies {
 
     compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: '1.3.2.RELEASE'
-    compile group: 'org.springframework.data', name: 'spring-data-couchbase', version: '2.0.0.RELEASE'
+    compile ('org.springframework.data:spring-data-couchbase:2.0.0.RELEASE') {
+        exclude group: 'org.springframework', module: 'spring-web'
+    }
     compile group: 'org.springframework.session', name: 'spring-session', version: '1.0.2.RELEASE'
     compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.7.1-1'
