Spring Session 1.1.0 support done, no docs

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -7,5 +7,7 @@ session-couchbase:
     password:
   in-memory:
     enabled: false
+  principal-sessions:
+    enabled: false
 
 logging.level.com.github.mkopylec.sessioncouchbase: trace
