--- a/build.gradle
+++ b/build.gradle
@@ -26,21 +26,24 @@ repositories {
     mavenCentral()
 }
 
+ext.springBootVersion = '1.4.1.RELEASE'
+
 dependencies {
 
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: '1.4.0.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: springBootVersion
     compile('org.springframework.data:spring-data-couchbase:2.1.2.RELEASE') {
         exclude group: 'org.springframework', module: 'spring-web'
     }
     compile group: 'org.springframework.session', name: 'spring-session', version: '1.2.2.RELEASE'
     compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.7.1-1'
+    compile group: 'com.github.foodev', name: 'jsondiff', version: '2.0.0'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
 
-    compile group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: '1.4.0.RELEASE', optional
+    compile group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: springBootVersion, optional
 
-    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '1.4.0.RELEASE'
-    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '1.4.0.RELEASE'
+    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: springBootVersion
+    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: springBootVersion
     testCompile group: 'org.spockframework', name: 'spock-spring', version: '1.0-groovy-2.4'
 }
 
