--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@ group 'com.github.mkopylec'
 archivesBaseName = name
 version scmVersion.version
 
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
@@ -31,14 +31,14 @@ ext.springBootVersion = '1.4.1.RELEASE'
 dependencies {
 
     compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: springBootVersion
-    compile('org.springframework.data:spring-data-couchbase:2.1.2.RELEASE') {
+    compile("org.springframework.boot:spring-boot-starter-data-couchbase:$springBootVersion") {
         exclude group: 'org.springframework', module: 'spring-web'
     }
     compile group: 'org.springframework.session', name: 'spring-session', version: '1.2.2.RELEASE'
     compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.7.1-1'
-    compile group: 'com.github.foodev', name: 'jsondiff', version: '2.0.0'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.4'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
+    compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.1'
 
     compile group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: springBootVersion, optional
 
