--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
         exclude group: 'org.springframework', module: 'spring-web'
     }
     compile group: 'org.springframework.session', name: 'spring-session', version: '1.2.2.RELEASE'
+    compile group: 'org.springframework.retry', name: 'spring-retry', version: '1.1.4.RELEASE'
     compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.4'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
