--- a/classes/test/session-couchbase-spring-boot-starter/application.yml
+++ b/classes/test/session-couchbase-spring-boot-starter/application.yml
@@ -1,10 +1,10 @@
 session-couchbase:
   timeout-in-seconds: 1800
-  application-namespace: test-application
+  namespace: test-application
   principal-sessions:
     enabled: false
   retry:
-    max-attempts: 1
+    max-attempts: 10
   in-memory:
     enabled: false
 
