debuging test changes reverted

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -8,6 +8,4 @@ session-couchbase:
   in-memory:
     enabled: false
 
-logging.level:
-  com.github.mkopylec.sessioncouchbase: trace
-  com.couchbase: trace
+logging.level.com.github.mkopylec.sessioncouchbase: trace
