--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath group: 'io.codearte.gradle.nexus', name: 'gradle-nexus-staging-plugin', version: '0.5.3'
+        classpath group: 'io.codearte.gradle.nexus', name: 'gradle-nexus-staging-plugin', version: '0.11.0'
     }
 }
 
@@ -11,13 +11,13 @@ plugins {
     id 'groovy'
     id 'maven-publish'
     id 'jacoco'
-    id 'nebula.optional-base' version '3.1.0'
-    id 'com.github.kt3k.coveralls' version '2.6.3'
+    id 'nebula.optional-base' version '3.2.0'
+    id 'com.github.kt3k.coveralls' version '2.8.1'
     id 'maven'
     id 'signing'
-    id 'pl.allegro.tech.build.axion-release' version '1.5.0'
+    id 'pl.allegro.tech.build.axion-release' version '1.7.2'
+    id 'io.codearte.nexus-staging' version '0.11.0'
 }
-apply plugin: 'io.codearte.nexus-staging'
 
 scmVersion {
     tag {
@@ -36,7 +36,7 @@ repositories {
     mavenCentral()
 }
 
-ext.springBootVersion = '1.5.1.RELEASE'
+ext.springBootVersion = '1.5.6.RELEASE'
 
 dependencies {
 
@@ -44,10 +44,10 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-data-couchbase:$springBootVersion") {
         exclude group: 'org.springframework', module: 'spring-web'
     }
-    compile group: 'org.springframework.session', name: 'spring-session', version: '1.3.0.RELEASE'
-    compile group: 'org.springframework.retry', name: 'spring-retry', version: '1.1.5.RELEASE'
+    compile group: 'org.springframework.session', name: 'spring-session', version: '1.3.1.RELEASE'
+    compile group: 'org.springframework.retry', name: 'spring-retry', version: '1.2.1.RELEASE'
     compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.6'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.9'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
     compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.1'
 
@@ -56,7 +56,7 @@ dependencies {
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: springBootVersion
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: springBootVersion
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-undertow', version: springBootVersion
-    testCompile group: 'org.spockframework', name: 'spock-spring', version: '1.1-groovy-2.4-rc-3'
+    testCompile group: 'org.spockframework', name: 'spock-spring', version: '1.1-groovy-2.4'
 }
 
 configurations {
@@ -140,8 +140,4 @@ jacocoTestReport {
         xml.enabled = true
         html.enabled = true
     }
-}
-
-nexusStaging {
-    numberOfRetries = 20
 }
