--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,12 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath group: 'io.codearte.gradle.nexus', name: 'gradle-nexus-staging-plugin', version: '0.11.0'
-    }
-}
-
 plugins {
     id 'groovy'
     id 'maven-publish'
     id 'jacoco'
     id 'nebula.optional-base' version '3.2.0'
-    id 'com.github.kt3k.coveralls' version '2.8.1'
+    id 'com.github.kt3k.coveralls' version '2.8.2'
     id 'maven'
     id 'signing'
-    id 'pl.allegro.tech.build.axion-release' version '1.7.2'
+    id 'pl.allegro.tech.build.axion-release' version '1.9.0'
     id 'io.codearte.nexus-staging' version '0.11.0'
 }
 
@@ -36,7 +27,7 @@ repositories {
     mavenCentral()
 }
 
-ext.springBootVersion = '1.5.6.RELEASE'
+ext.springBootVersion = '1.5.11.RELEASE'
 
 dependencies {
 
@@ -44,11 +35,11 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-data-couchbase:$springBootVersion") {
         exclude group: 'org.springframework', module: 'spring-web'
     }
-    compile group: 'org.springframework.session', name: 'spring-session', version: '1.3.1.RELEASE'
-    compile group: 'org.springframework.retry', name: 'spring-retry', version: '1.2.1.RELEASE'
+    compile group: 'org.springframework.session', name: 'spring-session', version: '1.3.2.RELEASE'
+    compile group: 'org.springframework.retry', name: 'spring-retry', version: '1.2.2.RELEASE'
     compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.9'
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
     compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.1'
 
     compile group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: springBootVersion, optional
@@ -61,6 +52,10 @@ dependencies {
 
 configurations {
     all*.exclude group: 'org.mortbay.jetty', module: 'servlet-api'
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '4.6'
 }
 
 task javadocJar(type: Jar) {
