--- a/build.gradle
+++ b/build.gradle
@@ -130,6 +130,10 @@ publishing {
     }
 }
 
+jacoco {
+    toolVersion = '0.8.1'
+}
+
 jacocoTestReport {
     reports {
         xml.enabled = true
