--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,10 @@ plugins {
     id 'groovy'
     id 'maven-publish'
     id 'jacoco'
-    id 'nebula.optional-base' version '3.2.0'
     id 'com.github.kt3k.coveralls' version '2.8.2'
     id 'maven'
     id 'signing'
-    id 'pl.allegro.tech.build.axion-release' version '1.9.0'
+    id 'pl.allegro.tech.build.axion-release' version '1.9.2'
     id 'io.codearte.nexus-staging' version '0.11.0'
 }
 
@@ -27,35 +26,25 @@ repositories {
     mavenCentral()
 }
 
-ext.springBootVersion = '1.5.11.RELEASE'
+ext.springBootVersion = '2.0.3.RELEASE'
 
 dependencies {
 
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: springBootVersion
-    compile("org.springframework.boot:spring-boot-starter-data-couchbase:$springBootVersion") {
-        exclude group: 'org.springframework', module: 'spring-web'
-    }
-    compile group: 'org.springframework.session', name: 'spring-session', version: '1.3.2.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: springBootVersion
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-couchbase', version: springBootVersion
+    compile group: 'org.springframework.session', name: 'spring-session-core', version: '2.0.4.RELEASE'
     compile group: 'org.springframework.retry', name: 'spring-retry', version: '1.2.2.RELEASE'
-    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.9'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
     compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.1'
 
-    compile group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: springBootVersion, optional
+    compileOnly group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: springBootVersion
 
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: springBootVersion
-    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: springBootVersion
-    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-undertow', version: springBootVersion
     testCompile group: 'org.spockframework', name: 'spock-spring', version: '1.1-groovy-2.4'
 }
 
-configurations {
-    all*.exclude group: 'org.mortbay.jetty', module: 'servlet-api'
-}
-
 task wrapper(type: Wrapper) {
-    gradleVersion = '4.6'
+    gradleVersion = '4.8'
 }
 
 task javadocJar(type: Jar) {
