--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -5,4 +5,5 @@ session-couchbase:
   in-memory:
     enabled: false
 
-logging.level.com.github.mkopylec.sessioncouchbase: trace
+logging.level:
+  com.github.mkopylec.sessioncouchbase: trace
