--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,11 @@ plugins {
     id 'groovy'
     id 'maven-publish'
     id 'jacoco'
-    id 'com.github.kt3k.coveralls' version '2.8.2'
+    id 'com.github.kt3k.coveralls' version '2.8.4'
     id 'maven'
     id 'signing'
-    id 'pl.allegro.tech.build.axion-release' version '1.9.2'
-    id 'io.codearte.nexus-staging' version '0.11.0'
+    id 'pl.allegro.tech.build.axion-release' version '1.10.2'
+    id 'io.codearte.nexus-staging' version '0.21.0'
 }
 
 scmVersion {
@@ -26,25 +26,26 @@ repositories {
     mavenCentral()
 }
 
-ext.springBootVersion = '2.0.3.RELEASE'
+ext.springBootVersion = '2.1.8.RELEASE'
 
 dependencies {
 
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: springBootVersion
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-couchbase', version: springBootVersion
-    compile group: 'org.springframework.session', name: 'spring-session-core', version: '2.0.4.RELEASE'
-    compile group: 'org.springframework.retry', name: 'spring-retry', version: '1.2.2.RELEASE'
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
-    compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.1'
+    compile group: 'org.springframework.session', name: 'spring-session-core', version: '2.1.8.RELEASE'
+    compile group: 'org.springframework.retry', name: 'spring-retry', version: '1.2.4.RELEASE'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
+    compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
 
     compileOnly group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: springBootVersion
 
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: springBootVersion
-    testCompile group: 'org.spockframework', name: 'spock-spring', version: '1.1-groovy-2.4'
+    testCompile group: 'org.spockframework', name: 'spock-spring', version: '1.3-groovy-2.5'
+    testCompile group: 'org.testcontainers', name: 'couchbase', version: '1.12.4'
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.8'
+wrapper {
+    gradleVersion = '6.0.1'
 }
 
 task javadocJar(type: Jar) {
@@ -120,7 +121,7 @@ publishing {
 }
 
 jacoco {
-    toolVersion = '0.8.1'
+    toolVersion = '0.8.5'
 }
 
 jacocoTestReport {
