--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-couchbase', version: springBootVersion
     compile group: 'org.springframework.session', name: 'spring-session-core', version: '2.1.8.RELEASE'
     compile group: 'org.springframework.retry', name: 'spring-retry', version: '1.2.4.RELEASE'
+    compile group: 'io.micrometer', name: 'micrometer-core', version: '1.1.5'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
     compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
 
